syntax = "proto3";

package yaml;

import "yaml/value.proto";

option go_package = "github.com/Jumpaku/eyamluate/golang/yaml";
option php_namespace = "Jumpaku\\Eyamluate\\Yaml";
option php_metadata_namespace = "Jumpaku\\Eyamluate\\Metadata\\Yaml";
option php_class_prefix = "PB";

service Encoder {
  rpc Encode(EncodeInput) returns (EncodeOutput) {}
}

enum EncodeFormat {
  ENCODE_FORMAT_YAML = 0;
  ENCODE_FORMAT_JSON = 1;
}
message EncodeInput {
  EncodeFormat format = 1;
  bool pretty = 2;
  Value value = 3;
}

message EncodeOutput {
  bool is_error = 1;
  string error_message = 2;
  string result = 3;
}
